Bug 1121769 - push picture size to the camera driver, even in video mode, r=aosmond